--- a/www.nass.gov.ng/56e731f90f4607df2a75946ac7ab3151ef4e3b34.yml
+++ b/www.nass.gov.ng/56e731f90f4607df2a75946ac7ab3151ef4e3b34.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:36:55 GMT
+    - Sat, 24 Jun 2017 05:45:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FMhi0sfZpd22uFUM6c3Eh3; path=/
+    - PHPSESSID=Wk8VDoCq0nqS4Yd8UVv%2CH1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:36:55 GMT
+recorded_at: Sat, 24 Jun 2017 05:45:11 GMT
