--- a/www.nass.gov.ng/ddf5cd8e3f3683596551d2723f5f6d47761766ad.yml
+++ b/www.nass.gov.ng/ddf5cd8e3f3683596551d2723f5f6d47761766ad.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:37:15 GMT
+    - Sat, 24 Jun 2017 05:46:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2Ctbk9IuwHbQZHkyaF%2CsuH1; path=/
+    - PHPSESSID=LK8CDTdkVD-unoGE1E2W43; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:37:15 GMT
+recorded_at: Sat, 24 Jun 2017 05:46:09 GMT
