--- a/www.nass.gov.ng/90c4d05075d2be6f74f7e7fb23eb9d77f3096e2b.yml
+++ b/www.nass.gov.ng/90c4d05075d2be6f74f7e7fb23eb9d77f3096e2b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:45:53 GMT
+    - Sat, 24 Jun 2017 05:53:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qkRDfC%2C060-VpdKNfV3Ih1; path=/
+    - PHPSESSID=aMK4kQSQEQXPGPzI6MJem3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:45:53 GMT
+recorded_at: Sat, 24 Jun 2017 05:53:38 GMT
