--- a/www.nass.gov.ng/9ddcf3cbf4a27ee2d8629114e83fc1b76fef2c54.yml
+++ b/www.nass.gov.ng/9ddcf3cbf4a27ee2d8629114e83fc1b76fef2c54.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:47:55 GMT
+    - Sat, 24 Jun 2017 05:56:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yc1o2S9W75VCCVhQaFjjw2; path=/
+    - PHPSESSID=a7FBJHdA%2CztQw-KkD81j%2C3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:47:55 GMT
+recorded_at: Sat, 24 Jun 2017 05:56:09 GMT
