--- a/www.nass.gov.ng/dbbfe5de3d74198e67bfb01f79e415ad4f7d6bef.yml
+++ b/www.nass.gov.ng/dbbfe5de3d74198e67bfb01f79e415ad4f7d6bef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:48:14 GMT
+    - Sat, 24 Jun 2017 05:57:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aAXFmu-ilpMFBC6xcGPl42; path=/
+    - PHPSESSID=xU9ugUhe%2CRP8WoN%2Cw7Yoe3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:48:14 GMT
+recorded_at: Sat, 24 Jun 2017 05:57:02 GMT
