--- a/www.nass.gov.ng/f8d1624d110106d6caae417f6a632ae22d9b2492.yml
+++ b/www.nass.gov.ng/f8d1624d110106d6caae417f6a632ae22d9b2492.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:51:41 GMT
+    - Sat, 24 Jun 2017 06:00:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-IFa5HMaVTx%2C6fX1t5hsG2; path=/
+    - PHPSESSID=e-2wAljn6pP370T5u7Db70; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:51:41 GMT
+recorded_at: Sat, 24 Jun 2017 06:00:36 GMT
