--- a/www.nass.gov.ng/6db5a2bc0af7170cdebca52b95c38a429d630165.yml
+++ b/www.nass.gov.ng/6db5a2bc0af7170cdebca52b95c38a429d630165.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:54:08 GMT
+    - Sat, 24 Jun 2017 06:02:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=sIzHmprVumPW%2CnXkomcLc1; path=/
+    - PHPSESSID=oqxaV5JptoioKaGznHSEp0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:54:09 GMT
+recorded_at: Sat, 24 Jun 2017 06:02:37 GMT
