--- a/www.nass.gov.ng/a26dd6cd219c69dde84917c86ae24952c3b5960c.yml
+++ b/www.nass.gov.ng/a26dd6cd219c69dde84917c86ae24952c3b5960c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:55:47 GMT
+    - Sat, 24 Jun 2017 06:04:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=13U3wkxxoJ36AE75Oro9C0; path=/
+    - PHPSESSID=1R3w-BEjxop30rMbwB%2CdE3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:55:47 GMT
+recorded_at: Sat, 24 Jun 2017 06:04:53 GMT
