--- a/www.nass.gov.ng/c8ee97531e15f0a410f88abc3734d9a4d860eb24.yml
+++ b/www.nass.gov.ng/c8ee97531e15f0a410f88abc3734d9a4d860eb24.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 00:58:25 GMT
+    - Sat, 24 Jun 2017 06:06:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xs1X1XgaKXgu1%2CRV1Wche0; path=/
+    - PHPSESSID=UI3zeQVir9DDJc-38JElK3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 00:58:25 GMT
+recorded_at: Sat, 24 Jun 2017 06:06:24 GMT
