--- a/www.nass.gov.ng/b43cf768b3d38c46af5421649bdad5a553709e8a.yml
+++ b/www.nass.gov.ng/b43cf768b3d38c46af5421649bdad5a553709e8a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 01:03:55 GMT
+    - Sat, 24 Jun 2017 06:12:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gOIEZQFHJs%2CoHKWSgdqJg1; path=/
+    - PHPSESSID=1VcFwrZhOCsnYRjxD3umK2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 01:03:55 GMT
+recorded_at: Sat, 24 Jun 2017 06:12:40 GMT
