--- a/www.nass.gov.ng/1306e95b56608c7d6d929e981b2412a55320b561.yml
+++ b/www.nass.gov.ng/1306e95b56608c7d6d929e981b2412a55320b561.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 01:17:47 GMT
+    - Sat, 24 Jun 2017 06:26:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Mwqqxvnux1-h8oCbttZgI2; path=/
+    - PHPSESSID=dQcxkojJAZ51aTiTIw%2Cdh3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 01:17:47 GMT
+recorded_at: Sat, 24 Jun 2017 06:26:09 GMT
