--- a/www.nass.gov.ng/730dc0a4d841b70c938ae692562efe4079c7aeb7.yml
+++ b/www.nass.gov.ng/730dc0a4d841b70c938ae692562efe4079c7aeb7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 01:18:04 GMT
+    - Sat, 24 Jun 2017 06:26:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-MkTvZ9jjKPCS84S1gdlE3; path=/
+    - PHPSESSID=GfsRL%2CFBkewh5sqcgUX%2CJ1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 01:18:04 GMT
+recorded_at: Sat, 24 Jun 2017 06:26:33 GMT
