--- a/www.nass.gov.ng/42b70e9663a5d4828bdb06c06ceff1fb5d954d6c.yml
+++ b/www.nass.gov.ng/42b70e9663a5d4828bdb06c06ceff1fb5d954d6c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 01:19:20 GMT
+    - Sat, 24 Jun 2017 06:27:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jA-r%2CnXX78XOijGdJ-eyv0; path=/
+    - PHPSESSID=Kq1m5lyKQAqrm45WcPsby0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 01:19:20 GMT
+recorded_at: Sat, 24 Jun 2017 06:27:39 GMT
