--- a/www.nass.gov.ng/11fac0bcf3a54faea9f6ad90d21b2f5f9c09aa29.yml
+++ b/www.nass.gov.ng/11fac0bcf3a54faea9f6ad90d21b2f5f9c09aa29.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 01:21:57 GMT
+    - Sat, 24 Jun 2017 06:30:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kqvsBwpbvQGLTu%2C4GQ4JJ0; path=/
+    - PHPSESSID=RTHN9BpQ6gb6o-eDTholK1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 01:21:57 GMT
+recorded_at: Sat, 24 Jun 2017 06:30:19 GMT
