--- a/www.nass.gov.ng/61531b370eb907ab683349aaaca322188d3f87b1.yml
+++ b/www.nass.gov.ng/61531b370eb907ab683349aaaca322188d3f87b1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 01:24:23 GMT
+    - Sat, 24 Jun 2017 06:32:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=f6NmvXWDR6Ugzk3b%2CwYnn1; path=/
+    - PHPSESSID=93rdoxQX7pwUfYnMs3ak92; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 01:24:23 GMT
+recorded_at: Sat, 24 Jun 2017 06:32:30 GMT
