--- a/www.nass.gov.ng/9f85666ebb698e2a1171654d13b8cf0faf5b435e.yml
+++ b/www.nass.gov.ng/9f85666ebb698e2a1171654d13b8cf0faf5b435e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 01:25:37 GMT
+    - Sat, 24 Jun 2017 06:33:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Nduy2oTpu8wpvuDWq4arb2; path=/
+    - PHPSESSID=KXdVqosKwtgczB%2CzhV3qD1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 01:25:37 GMT
+recorded_at: Sat, 24 Jun 2017 06:33:09 GMT
