--- a/www.nass.gov.ng/b8e54a41f48c28ee816d37c2fa77504f144d0fcd.yml
+++ b/www.nass.gov.ng/b8e54a41f48c28ee816d37c2fa77504f144d0fcd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 01:27:00 GMT
+    - Sat, 24 Jun 2017 06:34:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=i3z4dmKiW8rBiXRlSGVTX1; path=/
+    - PHPSESSID=7YnTMdUjD%2CS5rwcASipG13; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 01:27:01 GMT
+recorded_at: Sat, 24 Jun 2017 06:34:58 GMT
