--- a/www.nass.gov.ng/b4d88f1e8c50b6e2bc2f58e21908d9b328df45ce.yml
+++ b/www.nass.gov.ng/b4d88f1e8c50b6e2bc2f58e21908d9b328df45ce.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 01:39:07 GMT
+    - Sat, 24 Jun 2017 06:51:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=uu181QLvoLiu-erArf15C2; path=/
+    - PHPSESSID=uh12YanBTI%2C82o4RUPcHp3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 01:39:07 GMT
+recorded_at: Sat, 24 Jun 2017 06:51:41 GMT
