--- a/www.nass.gov.ng/7b3be567cf092467a5cc1620097fe477fbd410aa.yml
+++ b/www.nass.gov.ng/7b3be567cf092467a5cc1620097fe477fbd410aa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 01:40:56 GMT
+    - Sat, 24 Jun 2017 06:53:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0CyhYEoNEEI5yX3raKJ1q2; path=/
+    - PHPSESSID=c%2CtkzhD-SUKLGEhTSCuUH0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 01:40:56 GMT
+recorded_at: Sat, 24 Jun 2017 06:53:56 GMT
