--- a/www.nass.gov.ng/d819e065fe1dbf07582ac79ed746e0293bec99c7.yml
+++ b/www.nass.gov.ng/d819e065fe1dbf07582ac79ed746e0293bec99c7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 01:51:44 GMT
+    - Sat, 24 Jun 2017 07:02:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=cErOQKoNb2O7BX9DpfLxy1; path=/
+    - PHPSESSID=2ABEL%2CGIG8ks8obWc1u5h0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 01:51:44 GMT
+recorded_at: Sat, 24 Jun 2017 07:02:19 GMT
