--- a/www.nass.gov.ng/2db8738f3d273aef9510c9083d1412331a635e20.yml
+++ b/www.nass.gov.ng/2db8738f3d273aef9510c9083d1412331a635e20.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 01:52:01 GMT
+    - Sat, 24 Jun 2017 07:03:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GhoiTJfCxUAPzECB0yMs%2C3; path=/
+    - PHPSESSID=m2O1QpRaMigZdSAwmWLlj1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 01:52:01 GMT
+recorded_at: Sat, 24 Jun 2017 07:03:13 GMT
