--- a/www.nass.gov.ng/b87920547896fd21a76cb3ff59e00628916d97b4.yml
+++ b/www.nass.gov.ng/b87920547896fd21a76cb3ff59e00628916d97b4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 01:56:08 GMT
+    - Sat, 24 Jun 2017 07:06:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1jaTL1Ua9BTzCexMo7mdT1; path=/
+    - PHPSESSID=uhVJ%2CeqqZI9fBTPOHLbE73; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 01:56:08 GMT
+recorded_at: Sat, 24 Jun 2017 07:06:32 GMT
