--- a/www.nass.gov.ng/a4003b77df6fd38873a89d54c696100c7906a1df.yml
+++ b/www.nass.gov.ng/a4003b77df6fd38873a89d54c696100c7906a1df.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 01:58:14 GMT
+    - Sat, 24 Jun 2017 07:08:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-bq7a7CWpvsmxGb4VYdmv2; path=/
+    - PHPSESSID=-xPR89fCc2pr%2CHhdn9sJG2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 01:58:14 GMT
+recorded_at: Sat, 24 Jun 2017 07:08:33 GMT
