--- a/www.nass.gov.ng/8355b861616cc9f9aa1d8b3835ac215e10ebf6df.yml
+++ b/www.nass.gov.ng/8355b861616cc9f9aa1d8b3835ac215e10ebf6df.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 01:59:32 GMT
+    - Sat, 24 Jun 2017 07:10:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=r1pSwLu5wMWxrn2VIsrA11; path=/
+    - PHPSESSID=%2C0%2CoWH6qvHp3QRB9f6GIQ1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 01:59:32 GMT
+recorded_at: Sat, 24 Jun 2017 07:10:14 GMT
