--- a/www.nass.gov.ng/62457ac9595d6e8193d01b8820d72e7714ec44dd.yml
+++ b/www.nass.gov.ng/62457ac9595d6e8193d01b8820d72e7714ec44dd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 02:00:36 GMT
+    - Sat, 24 Jun 2017 07:10:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Jbhmgt5ksG2td1roDTsFz2; path=/
+    - PHPSESSID=poB92YlRv6SbEQRO%2CttCZ1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 02:00:36 GMT
+recorded_at: Sat, 24 Jun 2017 07:10:55 GMT
