--- a/www.nass.gov.ng/fb32a49cb46f93dfd4988356a4e8243d2c47d1af.yml
+++ b/www.nass.gov.ng/fb32a49cb46f93dfd4988356a4e8243d2c47d1af.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 02:03:52 GMT
+    - Sat, 24 Jun 2017 07:15:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RW6VdJyyKCLX3%2CtSFE2OK3; path=/
+    - PHPSESSID=67SsGkh6-kfQnsSps3Uao3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 02:03:53 GMT
+recorded_at: Sat, 24 Jun 2017 07:15:26 GMT
