--- a/www.nass.gov.ng/d65e7690ff1b80a136aa2c4d57eadaf3386a8065.yml
+++ b/www.nass.gov.ng/d65e7690ff1b80a136aa2c4d57eadaf3386a8065.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 02:04:23 GMT
+    - Sat, 24 Jun 2017 07:16:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LvxwFST%2CxZ6zukkI0ACCI2; path=/
+    - PHPSESSID=i2TgDMpSWh3tAFZ-IKRmJ0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 02:04:23 GMT
+recorded_at: Sat, 24 Jun 2017 07:16:07 GMT
