--- a/www.nass.gov.ng/2c56a52d8333a6d2f4a6fb4dbe324f4fc0515dbf.yml
+++ b/www.nass.gov.ng/2c56a52d8333a6d2f4a6fb4dbe324f4fc0515dbf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 02:10:14 GMT
+    - Sat, 24 Jun 2017 07:20:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CB1oa577p7YvQhKACx8yQ2; path=/
+    - PHPSESSID=Teq6Ys396rlPjKW0y1qwf1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 02:10:14 GMT
+recorded_at: Sat, 24 Jun 2017 07:20:47 GMT
