--- a/www.nass.gov.ng/a1368c3730ef28b18d11bd6f3f699992afd93a45.yml
+++ b/www.nass.gov.ng/a1368c3730ef28b18d11bd6f3f699992afd93a45.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 02:16:37 GMT
+    - Sat, 24 Jun 2017 07:28:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TBKl6h6tdeA87ibTkb%2CU-2; path=/
+    - PHPSESSID=tl6DhjtKOIr4PDatYqi5E0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 02:16:38 GMT
+recorded_at: Sat, 24 Jun 2017 07:28:47 GMT
