--- a/www.nass.gov.ng/464a6f39549e55ed5c66e93ebe58b3b2c1ca60ef.yml
+++ b/www.nass.gov.ng/464a6f39549e55ed5c66e93ebe58b3b2c1ca60ef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 02:19:51 GMT
+    - Sat, 24 Jun 2017 07:31:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FjKjlpse%2CL7Wmcv2SVxgE0; path=/
+    - PHPSESSID=Ug5cOFCevLCp4Xv7%2CVYsO2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 02:19:51 GMT
+recorded_at: Sat, 24 Jun 2017 07:31:38 GMT
