--- a/www.nass.gov.ng/f4b039f5ffd9d0be34dc855274c1ff02ce28374d.yml
+++ b/www.nass.gov.ng/f4b039f5ffd9d0be34dc855274c1ff02ce28374d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 02:59:10 GMT
+    - Sun, 25 Jun 2017 10:53:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WYpsDjD%2CYzXLvIkyjNTCG1; path=/
+    - PHPSESSID=c0KIB8fUWsTzvkZ685iYa0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 02:59:10 GMT
+recorded_at: Sun, 25 Jun 2017 10:53:29 GMT
