200 OK http://www.nass.gov.ng/mp/profile/589

--- a/www.nass.gov.ng/20e4b61e1a0f88d67ffd9eca7011e8010360a1cb.yml
+++ b/www.nass.gov.ng/20e4b61e1a0f88d67ffd9eca7011e8010360a1cb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 07:09:52 GMT
+    - Sun, 25 Jun 2017 15:06:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=o-koUC2n5%2ChEXk-RWvJ8R2; path=/
+    - PHPSESSID=ylw9H-kU-1fkgkMsEQopv2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 07:09:52 GMT
+recorded_at: Sun, 25 Jun 2017 15:06:37 GMT
