200 OK http://www.nass.gov.ng/mp/profile/547

--- a/www.nass.gov.ng/0eda65d8038f7b38233f653a318bbc231821b692.yml
+++ b/www.nass.gov.ng/0eda65d8038f7b38233f653a318bbc231821b692.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 07:22:54 GMT
+    - Sun, 25 Jun 2017 15:20:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=igDic6FK3f%2C2bbrfCco4a1; path=/
+    - PHPSESSID=rlBL3P1HcstKiDD-gxGAZ1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 07:22:54 GMT
+recorded_at: Sun, 25 Jun 2017 15:20:16 GMT
