200 OK http://www.nass.gov.ng/mp/profile/798

--- a/www.nass.gov.ng/92c8295c6f976dc01ddf1f95236c550df151e18c.yml
+++ b/www.nass.gov.ng/92c8295c6f976dc01ddf1f95236c550df151e18c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 24 Jun 2017 07:23:26 GMT
+    - Sun, 25 Jun 2017 15:20:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LtgpgQjttPpxqe8ZH%2Cl813; path=/
+    - PHPSESSID=vQecVF4tf5zQYKe0XQlwq2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 24 Jun 2017 07:23:26 GMT
+recorded_at: Sun, 25 Jun 2017 15:20:34 GMT
