200 OK http://www.nass.gov.ng/mp/profile/959

--- a/www.nass.gov.ng/3fa26d97b56f7183aff1296285516c6fbcb062ce.yml
+++ b/www.nass.gov.ng/3fa26d97b56f7183aff1296285516c6fbcb062ce.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 13:11:24 GMT
+    - Tue, 20 Mar 2018 22:42:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JEfZeX4MMgdD8d8v5wY2a2; path=/
+    - PHPSESSID=%2CEuw81nYfRqyNV5IvBdQw2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 13:11:24 GMT
+recorded_at: Tue, 20 Mar 2018 22:42:00 GMT
