200 OK http://www.nass.gov.ng/mp/profile/756

--- a/www.nass.gov.ng/2832b6deb4cb18ac9b03948efefb88b9b89f4fd3.yml
+++ b/www.nass.gov.ng/2832b6deb4cb18ac9b03948efefb88b9b89f4fd3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 14:09:25 GMT
+    - Tue, 20 Mar 2018 23:43:14 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bbq1hEnK%2CPJ5I%2CEvuSbcy0; path=/
+    - PHPSESSID=cqwJphhDGOWzh3-Q2xmov1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 14:09:25 GMT
+recorded_at: Tue, 20 Mar 2018 23:43:14 GMT
