200 OK http://www.nass.gov.ng/mp/profile/721

--- a/www.nass.gov.ng/92f970b8c2f53cf44a6e93c253f811f73df06339.yml
+++ b/www.nass.gov.ng/92f970b8c2f53cf44a6e93c253f811f73df06339.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Mar 2018 14:13:03 GMT
+    - Tue, 20 Mar 2018 23:48:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=iCdse2%2CPFtQYpoR59PbRs3; path=/
+    - PHPSESSID=RZiY6qyOmx%2C0vCwsL%2CtXv3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Mar 2018 14:13:03 GMT
+recorded_at: Tue, 20 Mar 2018 23:48:29 GMT
